--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DB_PASSWORD=your_password
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=your_db_name (Recommended :- Personal_Expense_Tracker_DB)
+
+# Required for auth and for expense/category endpoints (JWT)
+JWT_SECRET=your_jwt_secret_key
